--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="home__image">
           <div class="image">
-            <img src="/assets/images/personal-image.png" alt="" />
+            <img src="../assets/images/personal-image.png" alt="" />
           </div>
         </div>
       </section>
@@ -50,43 +50,43 @@
         <div class="skill-group">
           <div class="skill-box">
             <div class="skill-logo">
-              <img src="/assets/images/logo-html-5.png" alt="" />
+              <img src="./assets/images/logo-html-5.png" alt="" />
             </div>
             <span>HTML</span>
           </div>
           <div class="skill-box">
             <div class="skill-logo">
-              <img src="/assets/images/logo-css-3-256.png" alt="" />
+              <img src="./assets/images/logo-css-3-256.png" alt="" />
             </div>
             <span>CSS</span>
           </div>
           <div class="skill-box">
             <div class="skill-logo">
-              <img src="/assets/images/logo-javascript-icon-256.png" alt="" />
+              <img src="./assets/images/logo-javascript-icon-256.png" alt="" />
             </div>
             <span>Javascript</span>
           </div>
           <div class="skill-box">
             <div class="skill-logo">
-              <img src="/assets/images/logo-react-256.png" alt="" />
+              <img src="./assets/images/logo-react-256.png" alt="" />
             </div>
             <span>React</span>
           </div>
           <div class="skill-box">
             <div class="skill-logo" style="margin-top: 10px">
-              <img src="/assets/images/sass.png" alt="" />
+              <img src="./assets/images/sass.png" alt="" />
             </div>
             <span>Sass</span>
           </div>
           <div class="skill-box">
             <div class="skill-logo">
-              <img src="/assets/images/ant-design.png" alt="" />
+              <img src="./assets/images/ant-design.png" alt="" />
             </div>
             <span>Ant Design</span>
           </div>
           <div class="skill-box">
             <div class="skill-logo">
-              <img src="/assets/images/styled-components-logo.png" alt="" />
+              <img src="./assets/images/styled-components-logo.png" alt="" />
             </div>
             <span>Styled Components</span>
           </div>
@@ -94,7 +94,7 @@
       </section>
       <section id="about">
         <div class="about__image">
-          <img src="/assets/images/about-image.jpg" alt="" />
+          <img src="./assets/images/about-image.jpg" alt="" />
         </div>
         <div class="about__info">
           <h3>About Me</h3>
@@ -133,32 +133,32 @@
         <div class="portfolio-group">
           <div class="portfolio-box">
             <a href="#" target="_blank">
-              <img src="/assets/images/about-image.jpg" alt="" />
+              <img src="./assets/images/about-image.jpg" alt="" />
             </a>
           </div>
           <div class="portfolio-box">
             <a href="#" target="_blank">
-              <img src="/assets/images/about-image.jpg" alt="" />
+              <img src="./assets/images/about-image.jpg" alt="" />
             </a>
           </div>
           <div class="portfolio-box">
             <a href="#" target="_blank">
-              <img src="/assets/images/about-image.jpg" alt="" />
+              <img src="./assets/images/about-image.jpg" alt="" />
             </a>
           </div>
           <div class="portfolio-box">
             <a href="#" target="_blank">
-              <img src="/assets/images/about-image.jpg" alt="" />
+              <img src="./assets/images/about-image.jpg" alt="" />
             </a>
           </div>
           <div class="portfolio-box">
             <a href="#" target="_blank">
-              <img src="/assets/images/about-image.jpg" alt="" />
+              <img src="./assets/images/about-image.jpg" alt="" />
             </a>
           </div>
           <div class="portfolio-box">
             <a href="#" target="_blank">
-              <img src="/assets/images/about-image.jpg" alt="" />
+              <img src="./assets/images/about-image.jpg" alt="" />
             </a>
           </div>
         </div>
