--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="home__image">
           <div class="image">
-            <img src="../assets/images/personal-image.png" alt="" />
+            <img src="./assets/images/personal-image.png" alt="" />
           </div>
         </div>
       </section>
