add feature when scrolling ,disappear menu

--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" href="css/main.css" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
 
     <title>Supakorn Charoen - Portfolio</title>
   </head>
   <body>
-    <section id="nav-bar">
+    <section class="nav-bar">
       <div class="nav">
         <div class="logo">
           <ul>
@@ -150,8 +153,12 @@
         <h1>Frontend Portfolio</h1>
         <div class="portfolio-group">
           <div class="portfolio-box">
-            <a href="#" target="_blank">
-              <img src="./assets/images/about-image.jpg" alt="" />
+            <a href="https://pokedex-tums.netlify.app/" target="_blank">
+              <img src="./assets/images/pokemon-project.png" alt="" />
+              <div class="top-layer">
+                <span>Hello world</span>
+                <!-- <img src="./assets/images/play-solid.svg" alt="" /> -->
+              </div>
             </a>
           </div>
           <div class="portfolio-box">
