fixing responsive but not finish adding project

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
           <h3>Hello, I'm</h3>
           <h1>Supakorn Charoen</h1>
           <h3 class="greenText">Frontend Developer</h3>
-          <p>I specialize in the creation of frontend development.</p>
+          <p>
+            I specialize in the implementation of web designs through coding.
+          </p>
           <a href="#portfolio">
             <button><span>Portfolio</span></button>
           </a>
@@ -121,14 +123,14 @@
           <h3>About Me</h3>
           <h1>Get To Know Me</h1>
           <p>
-            A Frontend Developer with a comprehensive understanding of frontend
-            development. From translating design mockups into interactive
-            website, I create original and effective website that take all
-            project deliverables into account. Personal development is very
-            important to me and I'm constantly improving my skills and knowledge
-            to get the best results from every project. My meticulous attention
-            to detail and ability to work within tight deadlines ensures I
-            deliver projects on time, on budget, and on specification.
+            A Frontend Developer with in-depth knowledge of frontend
+            development. From design mockups to interactive websites, I create
+            unique and practical websites that take into account all client
+            deliverables. Personal growth is very important to me, and I am
+            always working to improve my skills and knowledge in order to
+            achieve the greatest outcomes from each assignment. My thorough
+            attention to detail and ability to work under pressure guarantee
+            that I complete projects on time, on budget, and to specification.
           </p>
           <div class="about__info-btn-groups">
             <a
@@ -156,7 +158,7 @@
             <a href="https://pokedex-tums.netlify.app/" target="_blank">
               <img src="./assets/images/pokemon-project.png" alt="" />
               <div class="top-layer">
-                <span>Hello world</span>
+                <span>Explore</span>
                 <!-- <img src="./assets/images/play-solid.svg" alt="" /> -->
               </div>
             </a>
