--- a/index.html
+++ b/index.html
@@ -158,8 +158,7 @@
             <a href="https://pokedex-tums.netlify.app/" target="_blank">
               <img src="./assets/images/pokemon-project.png" alt="" />
               <div class="top-layer">
-                <span>Explore</span>
-                <!-- <img src="./assets/images/play-solid.svg" alt="" /> -->
+                <span>View Project</span>
               </div>
             </a>
           </div>
@@ -202,6 +201,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="/main.js"></script>
+    <script src='./main.js" type="text/javascript"></script>
   </body>
 </html>
