--- a/index.html
+++ b/index.html
@@ -201,6 +201,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src='./main.js" type="text/javascript"></script>
+    <script src="./main.js" type="text/javascript"></script>
   </body>
 </html>
