changing to web dev portfolio

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="home__hello">
           <h3>Hello, I'm</h3>
           <h1>Supakorn Charoen</h1>
-          <h3 class="greenText">Frontend Developer</h3>
+          <h3 class="greenText">Web Developer</h3>
           <p>
             I specialize in the implementation of web designs through coding.
           </p>
@@ -74,6 +74,27 @@
         <h3>Skills</h3>
         <h1>My Skills</h1>
         <div class="skill-group">
+          <div class="skill-box">
+            <div class="skill-logo">
+              <img src="./assets/images/logo-php-512.png" alt="" />
+            </div>
+            <span>PHP</span>
+          </div>
+          <div class="skill-box">
+            <div class="skill-logo">
+              <img src="./assets/images/logo-laravel-icon-256.png" alt="" />
+            </div>
+            <span>Laravel</span>
+          </div>
+          <div class="skill-box">
+            <div
+              class="skill-logo"
+              style="max-width: 15rem; transform: translateY(1.4rem)"
+            >
+              <img src="./assets/images/wordpress.svg" alt="" />
+            </div>
+            <span style="transform: translateY(1.68rem)">WordPress</span>
+          </div>
           <div class="skill-box">
             <div class="skill-logo">
               <img src="./assets/images/logo-html-5.png" alt="" />
@@ -105,16 +126,13 @@
             <span>Sass</span>
           </div>
           <div class="skill-box">
-            <div class="skill-logo">
-              <img src="./assets/images/ant-design.png" alt="" />
+            <div
+              class="skill-logo"
+              style="max-width: 15rem; transform: translateY(1.4rem)"
+            >
+              <img src="./assets/images/shopify.svg" alt="" />
             </div>
-            <span>Ant Design</span>
-          </div>
-          <div class="skill-box">
-            <div class="skill-logo">
-              <img src="./assets/images/styled-components-logo.png" alt="" />
-            </div>
-            <span>Styled Components</span>
+            <span style="transform: translateY(1.1rem)">Shopify</span>
           </div>
         </div>
       </section>
@@ -126,14 +144,14 @@
           <h3>About Me</h3>
           <h1>Get To Know Me</h1>
           <p>
-            A Frontend Developer with in-depth knowledge of frontend
-            development. From design mockups to interactive websites, I create
-            unique and practical websites that take into account all client
-            deliverables. Personal growth is very important to me, and I am
-            always working to improve my skills and knowledge in order to
-            achieve the greatest outcomes from each assignment. My thorough
-            attention to detail and ability to work under pressure guarantee
-            that I complete projects on time, on budget, and to specification.
+            A Web Developer with in-depth knowledge of web development. From
+            design mockups to interactive websites, I create unique and
+            practical websites that take into account all client deliverables.
+            Personal growth is very important to me, and I am always working to
+            improve my skills and knowledge in order to achieve the greatest
+            outcomes from each assignment. My thorough attention to detail and
+            ability to work under pressure guarantee that I complete projects on
+            time, on budget, and to specification.
           </p>
           <div class="about__info-btn-groups">
             <a
@@ -155,39 +173,14 @@
       </section>
       <section id="portfolio">
         <h3>Portfolio</h3>
-        <h1>Frontend Portfolio</h1>
+        <h1>Web Developer Portfolio</h1>
         <div class="portfolio-group">
           <div class="portfolio-box">
             <a href="https://pokedex-tums.netlify.app/" target="_blank">
               <img src="./assets/images/pokemon-project.png" alt="" />
               <div class="top-layer">
-                <span>View Project</span>
+                <span>Pokedex App</span>
               </div>
-            </a>
-          </div>
-          <div class="portfolio-box">
-            <a href="#" target="_blank">
-              <img src="./assets/images/about-image.jpg" alt="" />
-            </a>
-          </div>
-          <div class="portfolio-box">
-            <a href="#" target="_blank">
-              <img src="./assets/images/about-image.jpg" alt="" />
-            </a>
-          </div>
-          <div class="portfolio-box">
-            <a href="#" target="_blank">
-              <img src="./assets/images/about-image.jpg" alt="" />
-            </a>
-          </div>
-          <div class="portfolio-box">
-            <a href="#" target="_blank">
-              <img src="./assets/images/about-image.jpg" alt="" />
-            </a>
-          </div>
-          <div class="portfolio-box">
-            <a href="#" target="_blank">
-              <img src="./assets/images/about-image.jpg" alt="" />
             </a>
           </div>
         </div>
