[31/3/2023] - Optimize the size of image

--- a/index.html
+++ b/index.html
@@ -87,13 +87,10 @@
             <span>Laravel</span>
           </div>
           <div class="skill-box">
-            <div
-              class="skill-logo"
-              style="max-width: 15rem; transform: translateY(1.4rem)"
-            >
-              <img src="./assets/images/wordpress.svg" alt="" />
+            <div class="skill-logo">
+              <img src="./assets/images/logo-wordpress.png" alt="" />
             </div>
-            <span style="transform: translateY(1.68rem)">WordPress</span>
+            <span>WordPress</span>
           </div>
           <div class="skill-box">
             <div class="skill-logo">
@@ -126,11 +123,8 @@
             <span>Sass</span>
           </div>
           <div class="skill-box">
-            <div
-              class="skill-logo"
-              style="max-width: 15rem; transform: translateY(1.4rem)"
-            >
-              <img src="./assets/images/shopify.svg" alt="" />
+            <div class="skill-logo">
+              <img src="./assets/images/logo-shopify.png" alt="" />
             </div>
             <span style="transform: translateY(1.1rem)">Shopify</span>
           </div>
