--- a/index.html
+++ b/index.html
@@ -138,14 +138,15 @@
           <h3>About Me</h3>
           <h1>Get To Know Me</h1>
           <p>
-            A Web Developer with in-depth knowledge of web development. From
-            design mockups to interactive websites, I create unique and
-            practical websites that take into account all client deliverables.
-            Personal growth is very important to me, and I am always working to
-            improve my skills and knowledge in order to achieve the greatest
-            outcomes from each assignment. My thorough attention to detail and
-            ability to work under pressure guarantee that I complete projects on
-            time, on budget, and to specification.
+            My name is Supakorn Charoen. I'm a passionate web developer that
+            specializes in HTML, CSS, Javascript, and PHP.   I create original
+            and effective designs that take project deliverables into account by
+            transforming design mockups into code. My meticulous attention to
+            detail and ability to work under pressure ensures that projects are
+            completed on schedule and under budget. I'm your man if you need
+            technical assistance churning out vital stuff to share with the
+            world. Please contact me if your company needs a competent team
+            player.
           </p>
           <div class="about__info-btn-groups">
             <a
