Adding Google Analytics

--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-HT1HNN7D6V"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-HT1HNN7D6V");
+    </script>
 
     <title>Supakorn Charoen - Portfolio</title>
   </head>
