--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-HT1HNN7D6V"
+      src="https://www.googletagmanager.com/gtag/js?id=G-WPRW2SMF4T"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -27,7 +27,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-HT1HNN7D6V");
+      gtag("config", "G-WPRW2SMF4T");
     </script>
 
     <title>Supakorn Charoen - Portfolio</title>
