Fix responsive portfolio section and link restaurant picture

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
               </a>
             </div>
             <a
-              href="http://immense-caverns-21372.herokuapp.com/"
+              href="http://immense-caverns-21372.herokuapp.com/login"
               target="_blank"
             >
               <img src="./assets/images/restaurant.jpg" alt="" />
