Add https to restaurant website

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
               </div>
               <div class="demo-box">
                 <a
-                  href="http://immense-caverns-21372.herokuapp.com/"
+                  href="https://immense-caverns-21372.herokuapp.com/"
                   target="_blank"
                   class="demo-info-box"
                 >
@@ -205,7 +205,7 @@
                 <a
                   class="demo-info-box"
                   target="_blank"
-                  href="http://immense-caverns-21372.herokuapp.com/login"
+                  href="https://immense-caverns-21372.herokuapp.com/login"
                 >
                   <h3>Live Backend</h3>
                   <i class="fa-solid fa-up-right-from-square"></i>
@@ -220,7 +220,7 @@
               </a>
             </div>
             <a
-              href="http://immense-caverns-21372.herokuapp.com/login"
+              href="https://immense-caverns-21372.herokuapp.com/login"
               target="_blank"
             >
               <img src="./assets/images/restaurant.jpg" alt="" />
