--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <title>Supakorn Charoen - Portfolio</title>
+    <title>Supakorn Charoen - Portfolioa</title>
   </head>
   <body>
     <section class="nav-bar">
