--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
       name="viewport"
       content="width=device-width,minimum-scale=1.0,maximum-scale=1.0"
     />
+    <meta name="title" content="supakorncharoen">
+    <meta name="description" content="This is a personal website for Supakorn Charoen Who is a web developer focusing on Laravel">
+    <meta name="keywords" content="Portfolio Website,Web developer, Programmer">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content=" days">
     <link rel="stylesheet" href="css/main.css" />
     <link
       rel="stylesheet"
